Final polishing of markdown

--- a/notebooks/05_association_rules.ipynb
+++ b/notebooks/05_association_rules.ipynb
@@ -360,17 +360,12 @@
     "## 3. Single-product frequencies (support)\n",
     "\n",
     "Measure **how common each product is across orders**. \n",
+    "To understand individual product popularity, we compute:\n",
+    "\t•\torder_count → in how many orders each product appears\n",
+    "\t•\tsupport → order_count / total_orders\n",
     "\n",
-    "    - `n_orders` = total number of orders in the `baskets` table\n",
-    "    - `explode` the `products` list so we get one row per order `(order_id, product_id)`\n",
-    "    - For each `product_id`, count how many **distinct orders** it appears in -> `order_count`\n",
-    "    - **Support** is defined as: \n",
-    "\n",
-    "   \\[\n",
-    "\\text{support(product)} = \\frac{\\text{# of orders containing product}}{\\text{total # of orders}}\n",
-    "\\]\n",
-    "\n",
-    "This gives a baseline for how frequently each product is purchased."
+    "This gives a baseline probability of seeing each product in an order.\n",
+    "\n"
    ]
   },
   {
@@ -487,17 +482,16 @@
    "id": "e49226e3",
    "metadata": {},
    "source": [
-    "## 4. Order-based product pairs with Pandas\n",
+    "## 4. Order-based product pairs (Pandas)\n",
     "\n",
-    "Examine the **pairs of products that appear together in the same order**. \n",
+    "Next, identify which products appear together in the same order.\n",
     "\n",
-    "For each order: \n",
+    "Procedure:\n",
+    "\t1.\tConvert each order’s product list to a set (avoid duplicates)\n",
+    "\t2.\tGenerate all 2-item combinations within that order\n",
+    "\t3.\tCount how many orders each pair occurs in\n",
     "\n",
-    "    - Take the **set of unique products** (so duplicates in the same order don't inflate counts)\n",
-    "    - Use `itertools.combinations(..., 2)` to generate all possible product pairs `(A, B)` in that order \n",
-    "    - Count how many orders each pair appear in -> `pair_count`\n",
-    "\n",
-    "Simple, fully transparent co-occurnce calculation using only Pandas + Python"
+    "This produces a dataframe of product pairs and their pair_count."
    ]
   },
   {
@@ -903,30 +897,27 @@
    "source": [
     "## 6. Apriori-based association rules (mlextend)\n",
     "\n",
-    "Use the `mlxtend` implementaion of **Apriori** on a one-hot encoded order-product matrix: \n",
+    "a\n",
+    "Apply Apriori to a one-hot order–product matrix.\n",
     "\n",
-    "1. Build `basket_matrix`:\n",
-    "    - Rows: `order_id`\n",
-    "    - Columns: `product_id`\n",
-    "    - Values: `True/False` indicating whether a product appears in that order \n",
+    "Setup:\n",
+    "\t•\trows = orders\n",
+    "\t•\tcolumns = product IDs\n",
+    "\t•\tvalues = True/False (product present in the order)\n",
     "\n",
-    "2. Run `apriori` with:\n",
-    "    - `min_support = 0.002`\n",
-    "    -` max_len = 2` (only include single products and pairs)\n",
-    "    - `use_colnames = True` to get product IDs in the itemsets\n",
+    "Parameters:\n",
+    "\t•\tmin_support = 0.002\n",
+    "\t•\tmax_len = 2\n",
+    "\t•\tuse_colnames = True\n",
     "\n",
-    "3. Sort frequent itemsets by support. \n",
+    "Observation\n",
     "\n",
-    "### Important observation\n",
+    "Apriori returns almost exclusively single-item sets, because:\n",
+    "\t•\tMedian basket size = 1\n",
+    "\t•\tProduct pairs rarely repeat across orders\n",
+    "\t•\tVery few reach the minimum support threshold\n",
     "\n",
-    "Apriori mostly returns **single-item** sets, not frequent pairs. \n",
-    "This is consisten with the structure of the data: \n",
-    "\n",
-    "- Most orders contain **only one product (median basket size = 1)**\n",
-    "- Product pairs rarely repeat across many orders\n",
-    "- As a result very few combinations reach the `min_support` threshold \n",
-    "\n",
-    "This is a realisitic outcome in many e-commerce settings where the \"basket\" is often a single item."
+    "This is realistic for e-commerce settings with mostly single-item orders.\n"
    ]
   },
   {
@@ -2061,29 +2052,25 @@
    "id": "43ee73d9",
    "metadata": {},
    "source": [
-    "## Co-occurence Heatmap (order-based)\n",
+    "## 6A. Co-purchase heatmap\n",
     "\n",
-    "To visually confrim the sparsity of the order-level associations: \n",
+    "To confirm visually:\n",
     "\n",
-    "1. Select the **top N most purchased products** by support. \n",
-    "2. Build a subset of the order-product matrix (`subset`) with only these products. \n",
-    "3. Computer a co-purchase matrix: \n",
+    "Steps:\n",
+    "\t1.\tSelect the top 20 most-purchased products\n",
+    "\t2.\tBuild a co-purchase matrix:\n",
     "\n",
-    "    - Rows and columns: product IDs\n",
-    "    - Cell (i, j): # of orders that contain **both** product i and product j. \n",
+    "    co_counts[i, j] = number of orders containing both i and j\n",
     "\n",
-    "4. Plot a heatmap of co-purchase counts. \n",
+    "    3.\tZero out diagonals\n",
+    "\t4.\tPlot heatmap\n",
     "\n",
-    "Interpreation:\n",
+    "Interpretation\n",
+    "\t•\tThe matrix is almost completely dark\n",
+    "\t•\tCo-purchases are extremely rare\n",
+    "\t•\tNo meaningful product clusters exist in order data\n",
     "\n",
-    "- Even among the **top 20** most-purchased products, co-purchases are very rare. \n",
-    "- Most cells are 0 or very small counts. \n",
-    "- There are **no clear high-strength product clusters** at the order level. \n",
-    "\n",
-    "This visually supports the Aprioro result: \n",
-    "**orders are usually single-product**, so pure basket-based recommendations are weak in this dataset. \n",
-    "\n",
-    "This motivates a pivot to **session-based behaviour**, where customers view multiple products even if they only buy one. \n",
+    "This reinforces the Apriori result and motivates moving to session-based behaviour.\n",
     "\n"
    ]
   },
@@ -2883,22 +2870,19 @@
    "id": "2966a4db",
    "metadata": {},
    "source": [
-    "## 7. Switching to session-based analysis +  Load events and build a session_based product co-view matrix \n",
+    "## 7. Switching to session-based associations\n",
     "\n",
-    "Because order-based Apriori doesn’t reveal strong product combinations (orders are too small), switch from:\n",
+    "Order data is too sparse, so we shift focus from:\n",
     "\n",
-    "- “**What gets purchased together?**”\n",
+    "“What gets bought together?”\n",
     "to\n",
-    "- “**What gets viewed together in the same browsing session?**”\n",
+    "“What gets viewed together?”\n",
     "\n",
-    "Session-level co-views can reveal **stronger affinities** between products, even if customers only purchase a single item.\n",
+    "Session-level page views give richer signals:\n",
+    "\t•\tMedian ≈ 4 products viewed per session\n",
+    "\t•\tMany sessions involve 4–6 product views\n",
     "\n",
-    "In the next steps:\n",
-    "\n",
-    "- Use `events_clean.csv` (event-level logs) to build a **session × product** view.\n",
-    "- Analyse which products tend to be **viewed together** in the same session.\n",
-    "- Visualise this with a co-view heatmap and a table of top pairs.\n",
-    "To normalise co-views by how often the **less-viewed** product appears.\n"
+    "This creates enough data to find meaningful associations."
    ]
   },
   {
@@ -2990,18 +2974,23 @@
    "id": "4a77ec76",
    "metadata": {},
    "source": [
-    "## 8. Build co-view matrix for top viewed products\n",
+    "## 8. Build co-view matrix (session-level)\n",
     "\n",
-    "1. Take the **top N most viewed products** overall.\n",
-    "2. Build a **session × product** one-hot matrix for these products:\n",
-    "   - Rows: `session_id`\n",
-    "   - Columns: product IDs\n",
-    "   - Values: 0/1 → whether the product was viewed in that session.\n",
+    "8.1 Identify top viewed products\n",
     "\n",
-    "3. Compute a co-view matrix:\n",
+    "We take the top 20 most-viewed products across all sessions.\n",
     "\n",
-    "   - Rows and columns: product IDs\n",
-    "   - Cell (i, j): # of **sessions** where both i and j were viewed at least once."
+    "8.2 Build session × product matrix\n",
+    "\n",
+    "Rows: session_id\n",
+    "Columns: product_id\n",
+    "Values: 1 if viewed in that session, else 0\n",
+    "\n",
+    "8.3 Compute co-view matrix\n",
+    "\n",
+    "`\\text{co\\_views}(i,j) = \\text{# sessions where both i and j were viewed}`\n",
+    "\n",
+    "This gives a dense, highly informative matrix of browsing behaviour.\n"
    ]
   },
   {
@@ -3231,9 +3220,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# 6. Session-based co-view heatmap (top viewed products)\n",
     "\n",
-    "# 6.1 Top N most viewed products\n",
     "top_n = 20\n",
     "\n",
     "product_view_counts = (\n",
@@ -3246,7 +3233,7 @@
     "top_viewed_products = product_view_counts.head(top_n).index.tolist()\n",
     "print(\"Top viewed products:\", top_viewed_products)\n",
     "\n",
-    "# 6.2 Build a session x product one-hot matrix for these products\n",
+    "#  Build a session x product one-hot matrix for these products\n",
     "session_product_long = (\n",
     "    session_product_views\n",
     "    .explode(\"products_viewed\")\n",
@@ -3279,13 +3266,28 @@
     "\n",
     "session_onehot_int = session_onehot.astype(int)\n",
     "\n",
-    "# 6.3 Co-view counts matrix: how many sessions viewed both i and j?\n",
+    "#  Co-view counts matrix: how many sessions viewed both i and j?\n",
     "co_view_counts = session_onehot_int.T.dot(session_onehot_int)\n",
     "\n",
     "# Zero out diagonal (product with itself)\n",
     "np.fill_diagonal(co_view_counts.values, 0)\n",
     "\n",
     "co_view_counts.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb74e12c",
+   "metadata": {},
+   "source": [
+    "## 8A. Co-view heatmap\n",
+    "\n",
+    "The heatmap shows:\n",
+    "\t•\tBright squares → strong co-view relationships\n",
+    "\t•\tDark squares → weak or no co-view relationship\n",
+    "\t•\tSeveral clear product clusters appear\n",
+    "\n",
+    "This is far richer than the order-based view.\n"
    ]
   },
   {
@@ -3335,22 +3337,17 @@
    "id": "b328d54a",
    "metadata": {},
    "source": [
-    "# 8.1 Top co-viewed product pairs (table)\n",
+    "## 8B. Top co-viewed product pairs (table)\n",
     "\n",
-    "To make the co-view patterns easier to use: \n",
+    "We extract a readable ranked table of:\n",
+    "\t•\tproduct_A\n",
+    "\t•\tproduct_B\n",
+    "\t•\tco_view_count\n",
     "\n",
-    "- Convert the co-view matrix into a long-form table:\n",
-    "    - `product_A`\n",
-    "    - `product_B`\n",
-    "    - `co_view_count` = # sessions that viewed both\n",
-    "\n",
-    "- Sort by `co_view_count` to find the most freuqently co-viewed paris among the top products \n",
-    "\n",
-    "These pairs are strong canditates for: \n",
-    "\n",
-    "- \"Cusstomers also viewed...\" recoomendations \n",
-    "- Collection pages or carousels combining related products \n",
-    "- Follow-up content suggestions in the browsing journey \n"
+    "These pairs can drive:\n",
+    "\t•\t“Customers also viewed…” recommendations\n",
+    "\t•\tProduct carousel suggestions\n",
+    "\t•\tImproved category navigation"
    ]
   },
   {
@@ -3568,27 +3565,29 @@
    "id": "9edeecf1",
    "metadata": {},
    "source": [
-    "## 9 Summary \n",
+    "## 9. Summary\n",
     "\n",
-    "- **Order-based analysis (purchaess)**\n",
-    "    - Built product baskets per order and computed product supports.\n",
-    "    - Derived pair-evel support, confidence, and lift using Pandas. \n",
-    "    - Ran Apriori (mlextend) on an order-product one-hot matrix.\n",
-    "    - Result: orders are usually **single-product**, so there are **no strong \"frequntly bought together\" pairs**; the co-purchase heatmap confirms this sparsity. \n",
+    "Order-based analysis (purchases)\n",
+    "\t•\tBuilt order baskets and computed product supports\n",
+    "\t•\tCalculated support, confidence, lift\n",
+    "\t•\tRan Apriori\n",
+    "\t•\tResult: orders are usually single-product, so no meaningful co-purchase patterns\n",
     "\n",
-    "-**Session-based analysis (co-views)**\n",
-    "    - Switched to event-level data (`events_clean`) and focused on product page views.\n",
-    "    - Found that sessions typically contain **4-6 distinct product views**, giving rich co-view signals. \n",
-    "    - Built a session x product one-hot matrix, and visualised it as a heatmap. \n",
-    "    - Extracted a ranked table of top co-viewed product pairs. \n",
+    "Session-based analysis (browsing behaviour)\n",
+    "\t•\tUsers typically view 4–6 products per session\n",
+    "\t•\tBuilt session × product matrix\n",
+    "\t•\tCo-view heatmap revealed meaningful product clusters\n",
+    "\t•\tExtracted top co-view pairs\n",
     "\n",
-    "**Takeaway:**\n",
-    "For this dataset, **order-based association rules are weak** because customers usually buy only one product per order. \n",
-    "However, **session-based co-views** reveal meaningful product relationships that can be used for: \n",
+    "Takeaway\n",
     "\n",
-    "    - \"Customers also viewed\" modules\n",
-    "    - Smarter product recommendataions \n",
-    "    - Designing navigation and content to reflect how users actually browse the catalogue. "
+    "Order-based recommendations are weak for this dataset.\n",
+    "Session-based co-views reveal much richer and more accurate product relationships.\n",
+    "\n",
+    "These can be used for:\n",
+    "\t•\t“Customers also viewed…” modules\n",
+    "\t•\tSmarter cross-sell strategies\n",
+    "\t•\tNavigation and catalogue improvements"
    ]
   }
  ],
