--- a/notebooks/06c_cbs_integration.ipynb
+++ b/notebooks/06c_cbs_integration.ipynb
@@ -873,6 +873,27 @@
     "print(f\"Saved SQL-ready device comparison to: {out_path}\")\n",
     "device_compare_sql.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7e695fc",
+   "metadata": {},
+   "source": [
+    "### 8. Summary \n",
+    "\n",
+    "This notebook integrates Dutch CBS device-usage statistics with the site’s session data to create a market benchmark.\n",
+    "Because the Kaggle dataset represents a global e-commerce site, and CBS reflects Dutch national behaviour, the comparison highlights how the site would perform if targeting the Netherlands.\n",
+    "\n",
+    "Key insights:\n",
+    "\t•\tOverall mobile usage is lower on the site (62% vs 84.4% in NL).\n",
+    "\t•\tSmartphone usage is much lower (55% vs 82.5%).\n",
+    "\t•\tTablet usage is also far below Dutch levels (7.1% vs 27.5%).\n",
+    "\n",
+    "Taken as a regional benchmark, this suggests that a global site expanding into the Dutch market would need a stronger mobile-first experience, as Dutch users rely far more on smartphones and tablets.\n",
+    "\n",
+    "Output:\n",
+    "A clean SQL-ready comparison table (cbs_device_compare.csv) and a bar chart visualising CBS vs site device mix.\n"
+   ]
   }
  ],
  "metadata": {
